--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-
+    <script src="./functions.js"></script>
     <script src="./app.js"></script>
 </body>
 </html>
